Modular refactor of OcomFromCmob